--- a/templates/student_login.html
+++ b/templates/student_login.html
@@ -38,7 +38,8 @@
         <div class="form-wrapper">
             <div class="form-container">
                 <!-- Login Form -->
-                <form id="loginForm" class="form-step active">
+                <form id="loginForm" class="form-step active" method="POST" action="/student-login/">
+                    {% csrf_token %}
                     <div class="step-header">
                         <div class="step-logo-container">
                             <img src="/static/images/123.png" alt="MirrorMind Logo" class="step-logo">
@@ -64,20 +65,12 @@
                             <i class="fas fa-lock input-icon"></i>
                             <input type="password" id="password" name="password" required placeholder="Enter your password">
                             <button type="button" class="toggle-password" data-target="password">
+                                <i class="fas fa-eye"></i>
                             </button>
                             <div class="input-effects">
                                 <div class="focus-border"></div>
                             </div>
                         </div>
-                    </div>
-
-                    <div class="form-options">
-                        <label class="checkbox-container">
-                            <input type="checkbox" id="rememberMe" name="remember">
-                            <span class="checkmark"></span>
-                            <span class="checkbox-label">Remember me</span>
-                        </label>
-                        <a href="#" class="forgot-password" id="forgotPassword">Forgot password?</a>
                     </div>
 
                     <div class="action-buttons">
@@ -93,7 +86,7 @@
                     </div>
 
                     <div class="card-footer">
-                        <p class="footer-text">New to MirrorMind? <a href="#" class="admin-link"> Sign Up</a></p>
+                        <p class="footer-text">New to MirrorMind? <a href="/student-signup/" class="admin-link"> Sign Up</a></p>
                         <a href="/" class="back-home">
                             <i class="fas fa-arrow-left"></i>
                             Back to Home
